Fix text wrap in service card button

--- a/src/widgets/ui/elements/ServiceCard/ServiceCard.module.scss
+++ b/src/widgets/ui/elements/ServiceCard/ServiceCard.module.scss
@@ -198,6 +198,9 @@
 		font-size: rem(16);
 	}
 }
+.button {
+	text-wrap: nowrap;
+}
 .footer {
 	display: flex;
 	align-items: center;
